# astra

./: .gitignore  astra.kicad_pcb  astra.kicad_pro
astra_parts_library/astra_parts_library.pretty/: SAMTEC_FTSH-107-01-F-DV-K-P-TR.kicad_mod
hardware/: astra.kicad_prl  astra.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware/astra_parts_library/FTSH_107_01_F_DV_K_P_TR/: FTSH-107-01-F-DV-K-P-TR.bak  FTSH-107-01-F-DV-K-P-TR.kicad_sym  FTSH-107-01-F-DV-K-P-TR.step  SAMTEC_FTSH-107-01-F-DV-K-P-TR.kicad_mod
hardware/production/: netlist.ipc
production/: bom.csv  designators.csv  positions.csv
software/astra/: Cargo.toml  build.rs
software/astra/.cargo/: config.toml
software/astra/src/: heartbeat_task_logic.rs  lib.rs  motor_task_logic.rs
software/astra/src/hw/: mod.rs  rp2350.rs  stm32h7.rs
